*Version 2.6.0*
* Added ability to override web.xml via placing a modified file at overrides/web/web.xml
* Added ability to enhance the base web.xml by placing override-web.xml into overrides/web/override-web.xml
* Added new permission groups to replace legacy permissions


*Version 2.5.2*
* Added ability to check for upgrades, and install upgrades and new modules locally
* Exposed medium and low priority work queue items
* Upgraded Serotonin JSON to 2.0.8
* Fixed swagger to work from other than localhost
* Upgraded Serotonin Utils to 2.0.8

*Version 2.5.0*
* Upgraded to Jetty 9
* Improved JSP Performance by changing/upgrading Engine
* Added status servlet to serve Mango application Status in JSON format at /status/mango.json
* Upgraded H2 to 1.4.181
* Upgraded Spring to 4.0.5
* Upgraded serotonin-utils to 2.1.3
* Added security to viewing data sources and data points so only users with proper permissions can see them
* Added additional links to Alarm Report table to allow clicking through to item of interest in event
* Added filter action to Alarm Links at top of page when multiple alarms are present
* Added list of available Units to select for each point
* Added Range Event detectors for Numeric points to alarm when values remain within or outside of a range
* Added Not higher than option to High Limit event detector
* Added Not lower than option to Low Limit event detector
* Added ability for Plain Text Renderer to use Units if defined as suffix
* Added css and favicon to url versioning system to ensure browser cache-refreshes on core updates
* Added some protective measures to ensure users with multiple tabs open don't clobber points and data sources, only 1 tab is officially supported
* Removed upgrade for MySQL PointValues table from MyISAM to InnoDB (users are expected to do this manually if desired)
* Fixed Help Window from floating around after clicking a linked help file. 