@@ -1,1 +1,0 @@
-Copy any scripts from ext-available into this folder to have them run at startup.
