@@ -25,9 +25,10 @@ else
 fi
 
 # Run enabled init extensions.
-if [ -d "$MA_HOME"/bin/ext-enabled" ]; then
-for f in "$MA_HOME"/bin/ext-enabled/*.sh
-do
-    source $f init
-done
+if [ "$(ls -A $MA_HOME/bin/ext-enabled)" ]; then
+    echo `date` 'ma-start: running init extensions...' >> "$MA_HOME"/logs/ma-script.log
+    for f in "$MA_HOME"/bin/ext-enabled/*.sh
+    do
+        source $f init
+    done
 fi
